# data-analysis-with-claude

./: AGENTS.md  README.md  build-guide.md  course-spec.md  env-vars-manifest.md  initial.md  instructor-setup-guide.md  reconciliation-note.md
examples/: agent-architecture.md  claude-agent-sdk-setup-guide.md  generate_synthetic_data.py  github-actions-workflow-spec.md  issue-example-dau-mau.md  issue-template-analysis-request.yml  learning-cycle-walkthrough-module2.md  marimo-data-exploration.py  (+7 more)
module-0-project-setup/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
module-0-project-setup/.claude/commands/: validate.md
module-0-project-setup/scripts/: setup_data.sh  validate.sh
module-0-project-setup/seeds/: schema.yml
module-1-hooks/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  dbt_project.yml  packages.yml  profiles.yml.example  pyproject.toml
module-1-hooks/.claude/commands/: validate.md
module-1-hooks/.claude/hooks/: dbt-auto-test.sh
module-1-hooks/models/marts/: fct_daily_active_users.sql  fct_monthly_active_users.sql  fct_retention_cohort.sql  schema.yml
module-1-hooks/models/staging/: schema.yml  sources.yml  stg_events.sql  stg_users.sql
module-1-hooks/references/: learning-cycle-framework.md  synthetic-data-guide.md  validation-framework.md
module-1-hooks/scripts/: generate_synthetic_data.py  load_to_bigquery.py  setup_data.sh  validate.sh
module-1-hooks/seeds/: raw_events.csv
module-3-orchestration/: .env.example  AGENTS.md  CLAUDE.md  README.md  dbt_project.yml  packages.yml  pyproject.toml
module-3-orchestration/.claude/: settings.json
module-3-orchestration/.claude/commands/: analyze.md  check-cost.md  generate-report.md  validate-models.md  validate.md
module-3-orchestration/.claude/hooks/: bq-cost-guard.sh  dbt-auto-test.sh  stop-summary.sh
module-3-orchestration/.github/workflows/: auto-analyze.yml
module-3-orchestration/models/marts/: fct_daily_active_users.sql  fct_monthly_active_users.sql  fct_retention_cohort.sql  schema.yml
module-3-orchestration/models/staging/: schema.yml  sources.yml  stg_events.sql  stg_users.sql
module-3-orchestration/scripts/: generate_synthetic_data.py  load_to_bigquery.py  validate.sh
module-4-error-handling/: .env.example  AGENTS.md  CLAUDE.md  README.md  dbt_project.yml  packages.yml  pyproject.toml
module-4-error-handling/.claude/commands/: analyze.md  check-cost.md  generate-report.md  validate-models.md  validate.md
module-4-error-handling/.claude/hooks/: bq-cost-guard.sh  dbt-auto-test.sh  stop-summary.sh
module-4-error-handling/.claude/prompts/: stage-1-parse.md
module-4-error-handling/.github/workflows/: auto-analyze.yml
module-4-error-handling/models/marts/: fct_daily_active_users.sql  fct_monthly_active_users.sql  fct_retention_cohort.sql  schema.yml
module-4-error-handling/models/staging/: schema.yml  sources.yml  stg_events.sql  stg_users.sql
module-4-error-handling/scripts/: generate_synthetic_data.py  load_to_bigquery.py  validate.sh
module-4-error-handling/seeds/: raw_users.csv
(+80 files in other folders)
