[project]
name = "fittrack-analysis-module-0"
version = "0.1.0"
description = "Module 0: Project Setup — environment and data infrastructure for DAU/MAU analysis"
requires-python = ">=3.11"
# Module 0 dependencies: dbt for transformations, BigQuery client for data loading.
# Hooks, marimo, and CI/CD tooling are added in later modules.
dependencies = [
    "dbt-core>=1.7,<2.0",
    "dbt-bigquery>=1.7,<2.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "google-cloud-bigquery>=3.20",
    "pandas-gbq>=0.23",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
